# spydr

./: .gitignore  README.md  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/selenium/webdriver/common/: by.html  keys.html
docs/_modules/selenium/webdriver/support/: wait.html
docs/_modules/spydr/: utils.html  webdriver.html
docs/_sources/: index.rst.txt
docs/_sources/source/: modules.rst.txt  spydr.rst.txt
docs/_static/: bizstyle.js
docs/source/: modules.html  spydr.html
sphinx/: conf.py  make.bat
sphinx/source/: spydr.rst
spydr/: __init__.py  utils.py  webdriver.py
