[metadata]
name = spydr
version = file: spydr/_version.txt
author = Aaron Chen
author_email = aaron@611b.com
url = https://github.com/aaronchen/spydr
description = Selenium Webdriver wrapper with Selenium IDE-like functionality
long_description_content_type = text/markdown
long_description = file: README.md
license_file = LICENSE
license = MIT
platform = any
keywords = spydr, selenium, python, webdriver
classifiers =
  Programming Language :: Python :: 3.7
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
  PyYAML >= 5.3.1
  selenium >=3.141.0
  webdriver_manager >= 3.2.1
