[metadata]
name = spydr
version = file: spydr/_version.txt
author = Aaron Chen
author_email = aaron@611b.com
url = https://github.com/aaronchen/spydr
description = Selenium Python WebDriver Wrapper - Commonly used WebDriver functionality in a package
long_description_content_type = text/markdown
long_description = file: README.md
license_file = LICENSE
license = MIT
platform = any
keywords = spydr, selenium, python, webdriver, wrapper
classifiers =
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
  PyYAML >= 5.3.1
  python-dateutil >= 2.8.1
  selenium >= 3.141.0
  webdriver_manager >= 3.2.2
